# fakeredis

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYING  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  Vagrantfile  fakenewsredis.py  fakeredis.py  requirements-26.txt  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test_fakenewsredis.py  test_fakeredis.py  test_fakeredis2.py  test_fakeredis_aioredis.py  test_fakeredis_hypothesis.py  tox.ini  vagrant-bootstrap.sh
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
fakeredis/: __init__.py  _aioredis.py  _aioredis1.py  _aioredis2.py  _async.py  _server.py  _zset.py  aioredis.py  plugins.py  server.py  zset.py
fakeredis2/: __init__.py  longdouble.py  server.py
scripts/: supported
src/fakeredis/: _server.py  aioredis.py
test/: conftest.py  test_aioredis.py  test_aioredis1.py  test_aioredis2.py  test_fakeredis.py  test_hypothesis.py  test_plugin.py
