[metadata]
name = fakeredis
version = attr: fakeredis.__version__
description = Fake implementation of redis API for testing purposes.
long_description=file: README.md
long_description_content_type=text/markdown
license = BSD
url = https://github.com/dsoftwareinc/fakeredis-py
author = James Saryerwinnie
author_email = js@jamesls.com
maintainer = Daniel Moran
maintainer_email = daniel.maruani@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = fakeredis
install_requires =
    packaging
    # Minor version updates to redis tend to break fakeredis. If you
    # need to use fakeredis with a newer redis, please submit a PR that
    # relaxes this restriction and adds it to the Github Actions tests.
    redis<=4.2.2
    six>=1.12
    sortedcontainers
python_requires = >=3.5

[options.extras_require]
lua =
    lupa
aioredis =
    aioredis

# Tool configurations below here

[flake8]
max-line-length = 119

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    real: tests that run only against a real redis server
    fake: tests that run only against fakeredis and do not require a real redis
    disconnected
    decode_responses
    min_server
